Quarry be fix